--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "amsterdam-amaps": "^2.0.1",
+    "amsterdam-stijl": "^3.0.5",
     "chalk": "2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
@@ -78,28 +80,27 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "leaflet": "^1.4.0",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "moment": "^2.24.0",
+    "proj4": "^2.5.0",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
+    "react-router-redux": "^5.0.0-alpha.8",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
-    "warning": "4.0.2",
-    "amsterdam-stijl": "^3.0.5",
-    "leaflet": "^1.4.0",
-    "moment": "^2.24.0",
-    "proj4": "^2.5.0",
-    "react-router-redux": "^5.0.0-alpha.8"
+    "warning": "4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
@@ -117,6 +118,7 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-react-transform": "3.0.0",
@@ -127,6 +129,9 @@
     "compression-webpack-plugin": "2.0.0",
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
+    "dyson": "^2.0.3",
+    "dyson-generators": "^0.2.0",
+    "dyson-image": "^0.2.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
@@ -150,14 +155,17 @@
     "lint-staged": "7.3.0",
     "ngrok": "3.1.0",
     "node-plop": "0.16.0",
+    "node-sass": "*",
+    "npm-run-all": "^4.0.5",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.5",
     "plop": "2.1.0",
     "pre-commit": "1.2.2",
     "prettier": "1.14.3",
     "react-app-polyfill": "0.1.3",
-    "react-test-renderer": "16.6.0",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "2.6.2",
+    "sass-loader": "*",
     "shelljs": "0.8.2",
     "style-loader": "0.23.1",
     "stylelint": "9.6.0",
@@ -172,13 +180,6 @@
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3 ",
     "webpack-pwa-manifest": "3.7.1",
-    "whatwg-fetch": "3.0.0",
-    "babel-plugin-inline-react-svg": "^0.5.4",
-    "dyson": "^2.0.3",
-    "dyson-generators": "^0.2.0",
-    "dyson-image": "^0.2.0",
-    "node-sass": "*",
-    "npm-run-all": "^4.0.5",
-    "sass-loader": "*"
+    "whatwg-fetch": "3.0.0"
   }
 }
