Adds json2csv dependency

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "json2csv": "^4.5.0",
     "leaflet": "^1.4.0",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
