--- a/package.json
+++ b/package.json
@@ -92,8 +92,10 @@
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
-    "react-router-dom": "4.3.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "4.0.1",
+    "redux-react-hook": "^3.0.4",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
