--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@datapunt/asc-assets": "^0.6.3",
+    "@datapunt/asc-ui": "^0.6.6",
     "amsterdam-amaps": "^2.0.1",
     "amsterdam-stijl": "^3.0.5",
     "chalk": "2.4.2",
@@ -112,6 +114,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
+    "@svgr/webpack": "^4.2.0",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -142,8 +145,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-redux-saga": "1.0.0",
     "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -175,7 +178,7 @@
     "stylelint-processor-styled-components": "1.6.0",
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.2.3",
-    "url-loader": "1.1.2",
+    "url-loader": "^1.1.2",
     "webpack": "4.30.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
