--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ip": "1.1.5",
     "json2csv": "^4.5.0",
     "leaflet": "^1.4.0",
+    "localforage": "^1.7.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
     "proj4": "^2.5.0",
