BW-53 Change title This PR: - changes the site's title from 'Basisregistratie wonen' to 'Registraties' - replaces all occurences in all files - modifies Jenkinsfile in preparation of pipeline setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basisregistratie-wonen",
+  "name": "registraties",
   "version": "0.0.1",
   "description": "Disclosure of data related to accomodation objects. Only available to logged in users.",
   "repository": {
