(Chore) Change repository remote

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Disclosure of data related to accomodation objects. Only available to logged in users.",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Amsterdam/basisregistratie-wonen.git"
+    "url": "git@github.com:Amsterdam/registraties.git"
   },
   "engines": {
     "npm": ">=5",
