Upgrades react-testing-library package

--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "prettier": "1.17.0",
     "react-app-polyfill": "0.2.2",
     "react-test-renderer": "16.8.6",
-    "react-testing-library": "6.1.2",
+    "react-testing-library": "^7.0.1",
     "rimraf": "2.6.3",
     "sass-loader": "*",
     "shelljs": "0.8.3",
