Sets jest env config in package.json so that tests can be debugged in VS Code

--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "@datapunt/asc-assets": "^0.6.3",
