--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,22 @@ services:
   web:
     build: .
     ports:
-      - "3001:80"
+      - '3001:80'
+
+  lint:
+    build:
+      context: .
+      target: builder
+    environment:
+      - NODE_ENV=development
+      - TZ=Europe/Amsterdam
+    command: npm run lint
+
+  test:
+    build:
+      context: .
+      target: builder
+    environment:
+      - NODE_ENV=development
+      - TZ=Europe/Amsterdam
+    command: npx jest
