--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "dyson-generators": "^0.2.0",
     "dyson-image": "^0.2.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.6.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "3.3.4",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
