--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "redux": "4.0.1",
     "redux-react-hook": "^3.0.4",
     "redux-saga": "1.0.2",
+    "redux-saga-test-plan": "^4.0.0-beta.3",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "styled-components": "4.2.0"
