(Chore) Sentry setup This PR: - Sends exception reports to Sentry from the `AccommodationObjectPage` saga and `App` saga. The former catches exceptions that are thrown in underlying sagas. The latter send exception reports for errors that occurred during logging in and logging out - Renders a feedback button in the `GlobalError` container component - Customizes the feedback dialog and - Adds appropriate translations

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@babel/polyfill": "7.4.3",
     "@datapunt/asc-assets": "^0.6.3",
     "@datapunt/asc-ui": "^0.6.6",
+    "@sentry/browser": "^5.4.0",
     "amsterdam-amaps": "^2.0.1",
     "amsterdam-stijl": "^3.0.5",
     "chalk": "2.4.2",
