BW-46 Summary container tests This PR: - adds `lodash.clonedeep` package - adds data resources - anonimizes endpoints - adds tests for the `Summary` container component and its selectors

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "json2csv": "^4.5.0",
     "leaflet": "^1.4.0",
     "lodash": "4.17.11",
+    "lodash.clonedeep": "^4.5.0",
     "minimist": "1.2.0",
     "proj4": "^2.5.0",
     "react": "16.8.6",
