(Chore) Increase overall coverage

--- a/package.json
+++ b/package.json
@@ -85,11 +85,13 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jest-localstorage-mock": "^2.4.0",
     "json2csv": "^4.5.0",
     "leaflet": "^1.4.0",
     "lodash": "4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "minimist": "1.2.0",
+    "mock-local-storage": "^1.1.8",
     "proj4": "^2.5.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
