Update amsterdam-styled-components and fix icons

--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@datapunt/asc-assets": "^0.6.3",
-    "@datapunt/asc-ui": "^0.6.6",
+    "@datapunt/asc-assets": "^0.14.2-rc.3",
+    "@datapunt/asc-ui": "^0.14.3-rc.0",
     "@sentry/browser": "^5.4.0",
     "amsterdam-amaps": "^2.0.1",
     "amsterdam-stijl": "^3.0.5",
