--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "@datapunt/asc-assets": "^0.14.2-rc.3",
+    "@datapunt/asc-core": "^0.14.2-rc.3",
     "@datapunt/asc-ui": "^0.14.3-rc.0",
     "@sentry/browser": "^5.4.0",
     "amsterdam-amaps": "^2.0.1",
