--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@datapunt/asc-assets": "^0.14.2-rc.3",
-    "@datapunt/asc-core": "^0.14.2-rc.3",
-    "@datapunt/asc-ui": "^0.14.3-rc.0",
+    "@datapunt/asc-assets": "^0.15.5",
+    "@datapunt/asc-core": "^0.15.5",
+    "@datapunt/asc-ui": "^0.15.5",
     "@sentry/browser": "^5.4.0",
     "amsterdam-amaps": "^2.0.1",
     "amsterdam-stijl": "^3.0.5",
@@ -108,7 +108,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -160,7 +160,7 @@
     "imports-loader": "0.8.0",
     "jest-cli": "^24.8.0",
     "jest-dom": "3.1.3",
-    "jest-styled-components": "6.3.1",
+    "jest-styled-components": "^6.3.3",
     "lint-staged": "8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
