--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "4.0.1",
+    "redux-persist": "^6.0.0",
     "redux-react-hook": "^3.0.4",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
