--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@datapunt/asc-assets": "^0.15.5",
     "@datapunt/asc-core": "^0.15.5",
     "@datapunt/asc-ui": "^0.15.5",
-    "@sentry/browser": "^5.6.3",
+    "@sentry/browser": "^5.4.0",
     "amsterdam-amaps": "^2.0.1",
     "amsterdam-stijl": "^3.0.5",
     "chalk": "2.4.2",
@@ -88,9 +88,9 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "jest-localstorage-mock": "^2.4.0",
-    "json2csv": "^4.5.3",
-    "leaflet": "^1.5.1",
-    "lodash": "^4.17.15",
+    "json2csv": "^4.5.0",
+    "leaflet": "^1.4.0",
+    "lodash": "^4.17.14",
     "lodash.clonedeep": "^4.5.0",
     "minimist": "1.2.0",
     "mock-local-storage": "^1.1.8",
@@ -101,15 +101,15 @@
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
-    "react-router": "^5.1.1",
-    "react-router-dom": "^5.1.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "4.0.1",
     "redux-persist": "^6.0.0",
     "redux-react-hook": "^3.0.4",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -122,7 +122,7 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
-    "@svgr/webpack": "^4.3.3",
+    "@svgr/webpack": "^4.2.0",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -141,7 +141,7 @@
     "dyson-generators": "^0.2.0",
     "dyson-image": "^0.2.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "3.3.4",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
@@ -174,7 +174,7 @@
     "react-app-polyfill": "0.2.2",
     "react-test-renderer": "16.8.6",
     "react-testing-library": "^7.0.1",
-    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "redux-saga-test-plan": "^4.0.0-beta.3",
     "rimraf": "2.6.3",
     "shelljs": "0.8.3",
     "style-loader": "0.23.1",
@@ -182,7 +182,7 @@
     "stylelint-config-recommended": "2.2.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.6.0",
-    "svg-url-loader": "^2.3.3",
+    "svg-url-loader": "^2.3.2",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "^1.1.2",
     "webpack": "4.30.0",
